# WebVoyeur

./: .gitignore  LICENSE  README.md  pyproject.toml  python-package.yml
tests/: test_webvoyeur.py
webvoyeur/: cli.py  peeker.py  utilities.py
